tests/NormalTests/paczka2/big_fuzzy/57141224.err
Error in line 1: 8I8nQdmX A657 53,0
Error in line 31: 52I929FH A657 35,2
Error in line 36: S290 S290 20,2
Error in line 29: LY2WhRYIjSi A657 90,9
Error in line 43: 6NQiL A657 95,6
Error in line 47: 52I929FH A418 22,3
Error in line 59: 1HXOkVE S290 78,9
Error in line 60: 1HXOkVE S688 13,9
Error in line 63: S290 A418 24,9
Error in line 78: 52I929FH S290 -3,2
Error in line 74: 1HXOkVE A418 17,0
Error in line 76: LY2WhRYIjSi A418 306,6
Error in line 81: 1HXOkVE S688 79,8
Error in line 73: 6NQiL S290 67,9
Error in line 92: LY2WhRYIjSi A657 R1,0
Error in line 89: LY2WhRYIjSi A657 10,2
Error in line 97: pmvKlj S290 10,7
Error in line 106: pmvKlj A418 81,4
Error in line 105: LY2WhRYIjSi A657 63,2
Error in line 114: LY2WhRYIjSi A418 31,8
Error in line 103: 52I929FH S290 108,7
Error in line 118: 52I929FH A657 39,8
Error in line 123: pmvKlj S290 36,3
Error in line 126: pmvKlj A418 85,7
Error in line 136: 52I929FH A418 89,5
Error in line 138: S290 S688 12,7
Error in line 134: LY2WhRYIjSi S688 49,3
Error in line 142: S290 A418 3,7
Error in line 146: S290 S688 31,1
Error in line 141: 52I929FH S290 26,3
Error in line 143: LY2WhRYIjSi A657 17,5
Error in line 161: 52I929FH S688 72,52
Error in line 158: pmvKlj A657 31,5
Error in line 148: S290 A657 4,9
Error in line 155: 8I8nQdmX A657 377,7
Error in line 174: 52I929FH A657 89,3
Error in line 169: S290 A418 62,2
Error in line 171: 1HXOkVE S688 6,6
Error in line 193: S290 A657 47,6
Error in line 197: 8I8nQdmX S290 49,3
Error in line 204: 8I8nQdmX A418 59,0
Error in line 199: 52I929FH S290 130,7
Error in line 218: 1HXOkVE A657 86,3
Error in line 219: pmvKlj A418 84,9
Error in line 221: 1HXOkVE A418 34,9
Error in line 232: pmvKlj S290 28,4
Error in line 236: 8I8nQdmX A657 7,35
Error in line 244: LY2WhRYIjSi S290 4,3
